abhyram-backend/force-app/main/default/objects/Employee__c/fields/Current_Badge__c.field-meta.xml
<CustomField>
    <fullName>Current_Badge__c</fullName>
    <description>Current Gamification Badge</description>
    <label>Current Badge</label>
    <length>50</length>
    <type>Text</type>
</CustomField>