abhyram-backend/force-app/main/default/objects/Employee__c/fields/Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>Employee_ID__c</fullName>
    <label>Employee ID</label>
    <type>Text</type>
    <length>20</length>
    <externalId>true</externalId>
    <unique>true</unique>
</CustomField>