abhyram-backend/force-app/main/default/objects/Employee__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Employee Gamification Level</description>
    <label>Level</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>