abhyram-backend/force-app/main/default/objects/Employee__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <description>Stores user password for custom auth</description>
    <label>Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>