abhyram-backend/force-app/main/default/objects/Employee__c/fields/Streak__c.field-meta.xml
<CustomField>
    <fullName>Streak__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Current daily login/timesheet streak.</description>
    <label>Current Streak</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>