abhyram-backend/force-app/main/default/objects/Employee__c/fields/XP__c.field-meta.xml
<CustomField>
    <fullName>XP__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Experience Points</description>
    <label>XP</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>